variables.Variables.scala.error
Compilation error:
Variables:8: error: type mismatch;
 found   : Int
 required: Boolean
while(cpt){
      ^Variables:10: error: value -- is not a member of Int
  cpt--;
     ^